--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -73,11 +73,11 @@
   height: 97%;
 }
 .l-a{
-  width: 60%;
+  width: 100%;
   height: 100%;
   background: #FDD9DD;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: space-around;
 }
