친구창 모달 구체적 틀 생성
모달 내에서 각 페이지를 누르면 이동됨. 디자인, 세부 기능은 아직 미구현.

--- a/src/component/scss/GameFriends.scss
+++ b/src/component/scss/GameFriends.scss
@@ -1,4 +1,4 @@
-// 모달 페이지
+// 모달 페이지 (메뉴 버튼을 눌렀을 시 나오는 전환용 페이지)
 .add_friend_menu {
 
   h2 {
@@ -22,15 +22,30 @@
 }
 
 .chat_friend_menu {
-
-  h2 {
-    font-size: 40px;
-    margin-bottom: 10px;
+  .chat_friend_menu_header {
+    h2 {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
   }
-  .chating_texts {
+}
+.chat_friend_menu_ch {
+  .chat_friend_menu_ch_header{
+    h2 {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+  }
+  .chat_texts {
+    .text_balloon {
+
+    }
+  }
+  .my_input_text {
 
   }
 }
+
 
 // return SCSS (단, 전체적 모달 부분은 제외한다.)
 
