--- a/src/user/scss/UserSideLeft.scss
+++ b/src/user/scss/UserSideLeft.scss
@@ -45,6 +45,7 @@
 
     width: 100%;
     height: 100%;
+    border-radius: 10px 0 0 10px;
 
     background-repeat: no-repeat;
     background-size: cover;
