--- a/src/component/scss/GameFriends.scss
+++ b/src/component/scss/GameFriends.scss
@@ -38,10 +38,10 @@
   }
   .chat_texts {
     .your_text_balloon {
-
+      background-color: #1ddc8c;
     }
     .my_text_balloon {
-
+      background-color: #78c7d2;
     }
   }
   .my_input_text {
