--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -56,6 +56,9 @@
         justify-content: end;
         font-size: 6rem;
 
+        /*background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;*/
       }
 
       .user-info-contain {
