--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -10,31 +10,37 @@
   .user-setting-buttons {
     display: flex;
     flex-direction: row;
-    align-content: space-between;
+    justify-content: space-between;
 
-    .lobby-move-button {
-      background: linear-gradient(180deg, rgba(51, 48, 80, 1) 0%, rgba(21, 20, 34, 1) 100%);
-      border: 2px solid #716E98;
-      border-radius: 3rem;
-      color: #716E98;
+
+    /*.lobby-move-button {
+      border: 0;
+      font-family: 'Assistant', sans-serif;
+      color: #dfdfdf;
+      font-weight: bold;
       font-size: 1.8rem;
       display: flex;
       align-items: center;
-      margin: 2rem 2rem;
-      padding: 0.5rem 2rem;
-    }
+      padding: 1.2rem;
+
+
+      .fill-door-open-fill-icon{
+        font-size: 2.5rem;
+        margin: 0.5rem;
+      }
+
+    }*/
 
   }
 
 
   .user-page-background {
     width: 100%;
-    height: 50vh;
-    //background: linear-gradient(90deg, #5fffa9 0%, #ab56ff 100%);
+    height: 45vh;
     display: flex;
     flex-flow: row nowrap;
     align-items: end;
-    padding: 0 5rem 2rem;
+    padding: 2rem 5rem 2rem;
     position: relative;
     z-index: 1;
 
@@ -65,10 +71,10 @@
 
         .user-name-item {
           //flex-wrap: wrap;
-          //align-items: center;
           //margin-bottom: 1rem;
+          //align-items: center;
           display: flex;
-          justify-content: flex-start;
+          justify-content: center;
           font-size: 3rem;
           color: #FFFFFF;
           font-weight: bold;
@@ -164,15 +170,59 @@
 
   }
 
-  .user-follow-info-contain{
+  .user-game-info-contain{
     width: 100%;
     height: 15vh;
-    background: #FFFFFF;
-    display: flex; justify-content: center; align-items: center;
+    display: flex;
+    justify-content: space-around;
+    align-content: start;
+    margin-top: 1rem;
 
-    .follow-item{
+    .user-follow-item
+    , .game-score-item
+    , .game-playing-record{
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #FFFFFF;
+
+      .follow-star-icon
+      , .game-score-icon
+      , .game-playing-icon{
+        border-radius: 50%;
+        font-size: 4.5rem;
+        text-align: center;
+        //margin: 0.5rem;
+      }
+
+      p{
+        font-size: 2.5rem;
+        margin: 0.5rem auto 1rem;
+      }
 
     }
+
+    /*.score-item{
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      font-size: 1.5rem;
+      font-weight: bold;
+
+      .game-score-icon{
+        background-color: #FFEA00;
+        border-radius: 50%;
+        padding: 0.7rem;
+        font-size: 1.7rem;
+        text-align: center;
+        margin: 0.5rem;
+      }
+
+    }*/
+
+
 
   }
 
