--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -12,6 +12,9 @@
     flex-direction: row;
     justify-content: space-between;
 
+    /*position: absolute;
+    bottom: 0; right: 0;*/
+
 
     /*.lobby-move-button {
       border: 0;
