--- a/src/component/scss/GameFriends.scss
+++ b/src/component/scss/GameFriends.scss
@@ -4,22 +4,30 @@
 
   h2 {
     font-size: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
   .lobby_search_friend_box {
-
+    margin-bottom: 10px;
   }
   .search_friend_list {
-
+    li {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
 
 // 친구창 리스트
 .list_friend_menu {
-
   h2 {
     font-size: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+  }
+  .list_friends_box {
+    li {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
 
@@ -28,7 +36,22 @@
   .chat_friend_menu_header {
     h2 {
       font-size: 40px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+    }
+  }
+  .chat_list {
+    .chat_list_ch {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      h3 {
+        font-size: 20px;
+        font-weight: 700;
+        margin-bottom: 10px;
+      }
+      p {
+        font-size: 15px;
+      }
     }
   }
 }
