--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -1,4 +1,3 @@
-
 .box{
   width: 100%;
   height: 101vh;
@@ -19,7 +18,6 @@
 .show-img{
   flex: 8;
   width: 100%;
-  background: skyblue;
   position: relative;
   display: flex;
   align-items: center;
@@ -33,7 +31,7 @@
   flex-direction: row;
 }
 .user{
-  width: 30%;
+  width: 100%;
   height: 100%;
   background: #61dafb;
   border: 1px solid black;
@@ -64,25 +62,25 @@
 }
 .chat-input{
   width: 100%;
-  height: 9.5%;
+  height: 10%;
   background: blueviolet;
   display: flex;
 }
-.chat-input button {
-  width: 30%;
+#messagee{
+  height: 100%;
 }
-.chat-input input{
-  width: 98%;
-  height: 97%;
+.input-group{
+  width: 100%;
 }
 .l-a{
-  width: 100%;
+  width: 16.8%;
   height: 100%;
   background: #FDD9DD;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  border: 1px solid black;
 }
 .p-img{
   width: 80%;
@@ -100,9 +98,8 @@
 
 }
 .score{
-  width: 40%;
+  width: 35%;
   height: 100%;
-  background: #78c7d2;
   font-size: 40px;
   display: flex;
   align-items: center;
@@ -152,6 +149,10 @@
   display: flex;
   align-items: end;
 }
+.showImg{
+  width: 45%;
+  height: 55%;
+}
 // ---------------------------------
 .p{
   position: absolute;
@@ -181,7 +182,9 @@
 }
 
 .time {
-  right: 50%;
+  top: 30px;
+  position: absolute;
+  left: 38%;
 }
 
 // 스피너
