--- a/src/component/scss/GameFriends.scss
+++ b/src/component/scss/GameFriends.scss
@@ -13,6 +13,10 @@
     li {
       display: flex;
       justify-content: space-between;
+      p {
+        font-weight: 700;
+        cursor: pointer;
+      }
     }
   }
 }
@@ -27,6 +31,11 @@
     li {
       display: flex;
       justify-content: space-between;
+      p {
+        font-weight: 500;
+        font-size: 15px;
+        cursor: pointer;
+      }
     }
   }
 }
@@ -44,6 +53,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      cursor: pointer;
       h3 {
         font-size: 20px;
         font-weight: 700;
@@ -65,6 +75,7 @@
 
     h2 {
       font-size: 20px;
+      font-weight: 700;
       margin-bottom: 10px;
       text-align: center;
     }
@@ -73,6 +84,7 @@
       background-color: #9B9AE2;
       border: none;
       border-radius: 10px;
+      cursor: pointer;
     }
   }
 
