--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -198,11 +198,23 @@
         font-size: 4.5rem;
         text-align: center;
         //margin: 0.5rem;
+        color: #1ddc8c;
+
+        &.starFollow{
+        }
+
       }
 
       p{
         font-size: 2.5rem;
         margin: 0.5rem auto 1rem;
+      }
+
+      button{
+        border: 0;
+        color: #FFFFFF;
+        font-size: 1.5rem;
+        font-weight: bold;
       }
 
     }
