--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -43,8 +43,9 @@
   bottom: 20px;
 }
 .input{
-  right: 130px;
-  bottom: 20px;
+  width: 20%;
+  height: 30%;
+  font-size: 17pt;
 }
 .img{
   width: 20%;
@@ -113,6 +114,8 @@
 }
 
 .modal-open-button, .modal-close-btn {
+  width: 30%;
+  height: 100%;
   cursor: pointer;
   margin-left: auto;
 }
@@ -146,6 +149,8 @@
   height: 50%;
 }
 .items{
+  width: 100%;
+  height: 50%;
   display: flex;
   align-items: end;
 }
