--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -56,6 +56,7 @@
   border: 2px solid blue; /* 선택된 이미지에 대한 테두리 스타일 */
 }
 .chat-log{
+  overflow-y:scroll;
   width: 100%;
   height: 90%;
   background: pink;
