--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -211,7 +211,7 @@ footer{
 .info {
   width: 100%;
   height: 100%;
-  background-color: blue; /* 왼쪽 div 배경색 */
+  background-image: linear-gradient(to top right, #65FC74, #93FFE5);
   position: relative; /* 자식 요소의 위치를 설정하기 위해 부모 요소를 relative로 설정 */
   overflow: hidden; /* 자식 요소가 부모 요소를 넘어가면 잘라냅니다. */
 }
@@ -222,13 +222,13 @@ footer{
   position: absolute; /* 자식 요소를 절대 위치로 설정 */
   top: 15%; /* 상단에 배치 */
   left: -60px; /* 왼쪽에 배치하고 평행사변형 모양을 만듭니다. */
-  background-color: red; /* 배경색을 설정합니다. */
+  background-color: white; /* 배경색을 설정합니다. */
   transform: skewX(-7deg);
   z-index: 1; /* 다른 요소 위에 배치 */
 }
 
 .info > img {
-  width: 57%; /* 자식 요소의 너비를 100%로 설정 */
+  width: 50%; /* 자식 요소의 너비를 100%로 설정 */
   height: 70%; /* 자식 요소의 높이를 100%로 설정 */
   position: absolute; /* 자식 요소를 절대 위치로 설정 */
   top: 15%; /* 상단에 배치 */
