--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -40,13 +40,15 @@
 
 }
 .create{
-  right: 20px;
-  bottom: 20px;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
 }
 .input{
-  width: 20%;
-  height: 30%;
-  font-size: 17pt;
+  border: 1px solid black;
+  width: 50%;
+  height: 20%;
+  font-size: 15pt;
 }
 .img{
   width: 20%;
@@ -116,8 +118,9 @@
 }
 
 .modal-open-button, .modal-close-btn {
-  width: 30%;
-  height: 100%;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
   cursor: pointer;
   margin-left: auto;
 }
@@ -153,8 +156,16 @@
 .items{
   width: 100%;
   height: 50%;
+  justify-content: center;
+  align-items: center;
   display: flex;
-  align-items: end;
+  flex-direction: column;
+}
+.buttons{
+  width: 30%;
+  height: 50%;
+  display: flex;
+  align-items: center;
 }
 .showImg{
   width: 45%;
