--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -54,7 +54,7 @@
       align-items: center;
 
       .user-page-profile {
-        background: linear-gradient(180deg, rgba(21, 20, 34, 1) 0%, rgba(51, 48, 80, 1) 100%);
+        //background: linear-gradient(180deg, rgba(21, 20, 34, 1) 0%, rgba(51, 48, 80, 1) 100%);
         border-radius: 50%;
         margin: 1rem;
         padding: 2rem;
