--- a/src/component/scss/GameFriends.scss
+++ b/src/component/scss/GameFriends.scss
@@ -72,6 +72,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px;
 
     h2 {
       font-size: 20px;
@@ -89,37 +90,43 @@
   }
 
   .chat_texts {
-    display: flex; // 수평으로 쌓이도록 수정
-    flex-direction: column; // 세로 방향으로 아이템 쌓이도록 유지
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    max-height: 300px;
 
     // 왼쪽에 위치하는 상대방 말풍선 스타일
     .your_text_balloon {
       background-color: #1ddc8c;
-      align-self: flex-start; // 왼쪽에 위치
-      border-radius: 15px 15px 15px 0; // 좌측 상단만 둥글게
-      margin-bottom: 10px; // 말풍선 간격 조절
-      min-width: 50px; // 최소 너비 설정
-      max-width: 70%; // 최대 너비 설정
-      word-wrap: break-word; // 긴 단어를 자동으로 줄 바꿈
+      align-self: flex-start;
+      border-radius: 15px 15px 15px 0;
+      margin-bottom: 10px;
+      min-width: 50px;
+      max-width: 70%;
+      word-wrap: break-word;
       padding: 10px;
     }
 
     // 오른쪽에 위치하는 내 말풍선 스타일
     .my_text_balloon {
       background-color: #78c7d2;
-      align-self: flex-end; // 오른쪽에 위치
-      border-radius: 15px 15px 0 15px; // 우측 상단만 둥글게
-      margin-bottom: 10px; // 말풍선 간격 조절
-      min-width: 50px; // 최소 너비 설정
-      max-width: 70%; // 최대 너비 설정
-      word-wrap: break-word; // 긴 단어를 자동으로 줄 바꿈
+      align-self: flex-end;
+      border-radius: 15px 15px 0 15px;
+      margin-bottom: 10px;
+      min-width: 50px;
+      max-width: 70%;
+      word-wrap: break-word;
       padding: 10px;
     }
   }
 
   .my_input_text {
     input {
-
+      width: 200px;
+      height: 40px;
+    }
+    .send_text_to {
+      cursor: pointer;
     }
   }
 }
