--- a/src/component/main/scss/Button.scss
+++ b/src/component/main/scss/Button.scss
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 
-
-
-
 .description, .link {
   font-family: 'Amatic SC', cursive;
   text-align: center;
@@ -12,7 +9,7 @@
   font-size: 50px;
 }
 
-.btn {
+.btn1 {
   border: none;
   display: block;
   text-align: center;
