--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -177,16 +177,6 @@
   height: 55%;
 }
 // ---------------------------------
-.p{
-  position: absolute;
-  right: 30px;
-  top: 0;
-}
-.i{
-  position: absolute;
-  right: 30px;
-  top: 60px;
-}
 .u{
   position: absolute;
   right: 30px;
@@ -203,6 +193,7 @@
   top: 30px;
   position: absolute;
   left: 38%;
+  z-index: 100;
 }
 
 // 스피너
