--- a/src/component/scss/GameBbox1.scss
+++ b/src/component/scss/GameBbox1.scss
@@ -35,12 +35,12 @@
   }
 
   .rank_box {
-    background-color: #A48FB8;
+    background-color: #D3C7DE;
     height: 100%;
     flex: 0 1 auto;
     overflow: hidden;
     h4 {
-      color: #FFF;
+      color: #000;
       font-weight: 400;
       font-size: 30px;
       text-align: center;
@@ -54,7 +54,7 @@
         position: relative;
         .User_Ranking_box {
           p {
-            color: #FFFFFF;
+            color: #000;
             margin-right: 10px;
             margin-bottom: 10px;
             float: left;
