--- a/src/component/scss/GameFooter.scss
+++ b/src/component/scss/GameFooter.scss
@@ -5,7 +5,7 @@
 .footer-container {
   width: 100%;
   height: 75px;
-  background-color: #9A95E2;
+  background-color: #6D5D99;
   display: flex;
   justify-content: space-between;
   align-items: center;
