--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -17,7 +17,7 @@
   background: #fff9f9;
 }
 .show-img{
-  flex: 8;
+  flex: 7.5;
   width: 100%;
   position: relative;
   flex-direction: column;
@@ -25,6 +25,7 @@
   align-items: center;
   justify-content: end;
   background: #78c7d2;
+  padding-bottom: 40px;
 }
 .w{
   height: 20%;
@@ -233,4 +234,21 @@
 .btn-jittery {
   bottom: -30px;
     animation: jittery 4s infinite;
+}
+.btn1 {
+  border: none;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  color: #000000;
+  font-weight: 700;
+  font-size: 40px;
+  background-color: #ffffff;
+  padding: 17px 60px;
+  margin: 0 auto;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.20);
 }
