Header 프로필 사진 띄우기 성공
[남은 할 일]
1. 프로필 하단 total 띄우기
2. 팔로우, 채팅 기능 구현
3. 전체 디자인 수정
4. 헤더 로그인, 로그아웃 일부 수정 필요.(로그아웃이 감지가 안되는 상태.)

--- a/src/component/main/scss/Header.scss
+++ b/src/component/main/scss/Header.scss
@@ -5,10 +5,14 @@
   align-items: center;
   .header-table li{
     margin-right: 30px;
-    .header-login-btn {
-      border: none;
-      cursor: pointer;
-    }
+  }
+  .header-login-btn {
+    cursor: pointer;
+    border: none;
+    background-color: #E3D9FF;
+    border-radius: 30px;
+    padding: 10px;
+    font-weight: 700;
   }
   .header_profile_image {
     width: 45px;
@@ -24,8 +28,9 @@
   position: fixed;
   background-color: #6D5D99;
   .header_logo{
-    width: 75px;
-    height: 75px;
+    width: 70px;
+    height: 70px;
+    margin-left: 10px;
   }
 }
 
