잡가서 이어서

--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -30,6 +30,16 @@
 .w{
   height: 20%;
 }
+.o{
+  position: absolute;
+  left: 35%;
+  top: 35%;
+  width: 100px;
+  height: 70px;
+}
+.hidden {
+  display: none;
+}
 .user-list{
   flex: 2;
   width: 100%;
