로비 방 검색 기능 성공
에러 메시지 알림 삭제함.

--- a/src/component/scss/GameBbox1.scss
+++ b/src/component/scss/GameBbox1.scss
@@ -13,7 +13,7 @@
       border-radius: 100px;
       margin: 30px;
       border: 3px solid transparent;
-      background-image: linear-gradient(#444, #444), linear-gradient(to left,#9884B0,#CCBFFF);
+      background-image: linear-gradient(#444, #444), linear-gradient(to left, #6f479d,#CCBFFF);
       background-clip: content-box, border-box;
       background-origin: border-box;
       img {
