--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -134,10 +134,25 @@
   height: 100%;
   border-radius: 100px;
 }
-
+.user-table{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+}
 // 닉네임 스타일 추가 예정
-.p-img nick-name {
-
+.nick-name {
+  flex: 3;
+  font-weight: 700;
+  font-size: 22px;
+}
+.profile{
+  width: 100%;
+  height: 100%;
+  flex: 7;
+  background: white;
 }
 
 .score {
