--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -304,6 +304,21 @@
   border-radius: 5%;
   bottom: -30px;
   animation: jittery 4s infinite;
+  & ::before {
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: var(--btn-bg);
+    transform: scaleX(0);
+    transition: 0.3s;
+  }
+  &:hover {
+    background: #000000;
+    color: #ffffff;
+    &::before {
+      transform: scaleX(1);
+    }
+  }
 }
 
 .btn1 {
