--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -394,3 +394,33 @@
   background-color: green;
   border: 3px solid blue;
 }
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 어두운 배경색 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+}
+.answer-modal{
+  position: absolute;
+  width: 30%;
+  height: 30%;
+  top: 40%;
+  left: 40%;
+  z-index: 100;
+}
+
+// 게임 끝났을 때 뜨는 모달 수정 필요
+.end-modal{
+  position: absolute;
+  width: 30%;
+  height: 30%;
+  top: 40%;
+  left: 40%;
+  z-index: 101;
+}
