--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -121,6 +121,18 @@
   justify-content: space-around;
   border: 1px solid black;
 }
+.user-score{
+  width: 100%;
+}
+.end-user-score{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.end-user-table{
+
+}
 
 .p-img {
   width: 80%;
@@ -190,15 +202,26 @@
   z-index: 2;
   background: rgba(0, 0, 0, 0.5);
 }
-
-.modal-content {
+.modal-content{
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: #66FFCC;
   border-radius: 24px;
   width: 70%;
   height: 70%;
   padding: 15px;
+}
+.end-text, .answer-text{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 20%;
+}
+.end-close{
+  bottom: -25%;
+  width: 100%;
+  height: 20%;
 }
 
 .imgs {
@@ -356,13 +379,13 @@
   margin-left: 40%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.20);
 }
-
-.btn-exit {
-  border-radius: 5%;
+.btn-exit{
   position: absolute;
   width: 130px;
   top: 20px;
   left: 20px;
+}
+.btn-style {
   transition: 0.3s;
   z-index: 1;
   & ::before {
@@ -418,9 +441,9 @@
 // 게임 끝났을 때 뜨는 모달 수정 필요
 .end-modal{
   position: absolute;
-  width: 30%;
-  height: 30%;
-  top: 40%;
-  left: 40%;
+  width: 50%;
+  height: 50%;
+  top: 35%;
+  left: 35%;
   z-index: 101;
 }
