--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -166,7 +166,11 @@
   width: 100%;
   height: 100%;
   flex: 7;
-  background: white;
+}
+.profile img{
+  border-radius: 90%;
+  width: 100%;
+  height: 100%;
 }
 
 .score {
