--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -59,7 +59,6 @@
   width: 100%;
   height: 100%;
   background: #61dafb;
-  border: 1px solid black;
   display: flex;
 
 }
@@ -118,6 +117,21 @@
   justify-content: space-around;
   border: 1px solid black;
 }
+.animated-slide-in {
+  animation: slideIn 0.5s forwards;
+  opacity: 0;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
 .user-score{
   font-size: 18pt;
   font-weight: 700;
@@ -165,12 +179,17 @@
 .profile{
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex: 7;
+
 }
 .profile img{
   border-radius: 90%;
-  width: 100%;
-  height: 100%;
+  background: #fff9f9;
+  width: 90%;
+  height: 90%;
 }
 
 .score {
