--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -68,7 +68,7 @@
 }
 
 .input {
-  border: 1px solid black;
+  //border: 1px solid black;
   width: 45%;
   height: 20%;
   font-size: 15pt;
@@ -76,7 +76,7 @@
 
 .img {
   width: 20%;
-  border: 1px solid black;
+  //border: 1px solid black;
 }
 
 .img.selected {
