랭킹 닉네임 클릭시 해당 마이페이지로 이동.

--- a/src/component/scss/GameBbox1.scss
+++ b/src/component/scss/GameBbox1.scss
@@ -61,6 +61,8 @@
             margin-right: 10px;
             margin-bottom: 10px;
             float: left;
+            cursor: pointer;
+            font-weight: 700;
           }
 
           .rank_score {
