--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -34,12 +34,16 @@ body{
   text-align: center;
   position: relative;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 .container:after{
   width: 100%;
   height: 100%;
   content: "";
-  background: url(https://image.civitai.com/xG1nkqKTMzGDvpLrqFT7WA/f415ba1e-a5e8-49d9-b6a6-e61a7fc1c0cb/original=true/00082-1390529945-breakdomainrealistic_R2333-vae-ft-mse-840000-b3c6b014.jpeg) no-repeat;
+  background: url('../../../../public/img/minn.jpg')no-repeat ;
+  background-size: cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -52,16 +56,26 @@ body{
 }
 .logo{
   color: white;
-  font-size: 120px;
+  font-size: 50px;
   font-weight: bold;
-  margin: 60px 0 100px 0;
+  display: flex;
+  align-items: center;
+  height: 30%;
+}
+.l-g{
+  margin-left: 10%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .l-g p{
   color: white;
   font-size: 30px;
   width: 870px;
-  margin-bottom: 6em;
+  margin-bottom: 3em;
 }
 .middle{
   width: 100%;
