로비 고치기

--- a/src/component/scss/GameBbox1.scss
+++ b/src/component/scss/GameBbox1.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  .profile {
+  .profile_circle {
     background-color: #A48FB8;
     height: 100%;
     flex: 0 1 auto;
