--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -58,12 +58,13 @@ body{
   color: white;
   font-size: 50px;
   font-weight: bold;
-  display: flex;
-  align-items: center;
-  height: 30%;
+  height: 20%;
+}
+.red-text{
+  color: #FF3333;
 }
 .l-g{
-  margin-left: 10%;
+  margin-left: 7%;
   height: 90vh;
   display: flex;
   flex-direction: column;
@@ -112,7 +113,6 @@ body{
 .b-box {
   position: relative;
   width: 1030px; height: 685px;
-
 }
 .t-box {
   position: relative;
@@ -181,7 +181,6 @@ body{
   width: 100%;
   text-transform: uppercase;
 }
-
 .content-box{
   margin-bottom: 80px;
   padding-top: 100px;
@@ -189,14 +188,14 @@ body{
 .content-box p{
   text-align: center;
   font-size: 15px;
+  font-weight: 700;
 }
-
 .content-title{
   text-align: center;
   font-size: 43px;
   padding-bottom: 30px;
+  font-weight: 700;
 }
-
 .dots-header-wrapper {
   position: fixed;
   top: 0;
@@ -204,7 +203,6 @@ body{
   width: 100%;
   z-index: 100;
 }
-
 // bottom-box
 .bottom-box{
   background: #282c34;
@@ -214,37 +212,107 @@ body{
   position: relative;
   z-index: 1;
 }
-
-
 footer{
   position : absolute;
   bottom: 0;
 }
-
-
 .info {
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(to top right, #65FC74, #93FFE5);
-  position: relative; /* 자식 요소의 위치를 설정하기 위해 부모 요소를 relative로 설정 */
-  overflow: hidden; /* 자식 요소가 부모 요소를 넘어가면 잘라냅니다. */
+  background-image: linear-gradient(to top right, #3f77cc,#071d6e);
+  position: relative;
+  overflow: hidden;
 }
-
 .info > div {
-  width: 58%; /* 자식 요소의 너비를 100%로 설정 */
-  height: 70%; /* 자식 요소의 높이를 100%로 설정 */
-  position: absolute; /* 자식 요소를 절대 위치로 설정 */
-  top: 15%; /* 상단에 배치 */
-  left: -60px; /* 왼쪽에 배치하고 평행사변형 모양을 만듭니다. */
-  background-color: white; /* 배경색을 설정합니다. */
+  width: 55%;
+  height: 70%;
+  position: absolute;
+  top: 10%;
+  left: -5%;
+  background-color: white;
   transform: skewX(-7deg);
-  z-index: 1; /* 다른 요소 위에 배치 */
+  z-index: 1;
+}
+.info > img {
+  width: 60%;
+  height: 70%;
+  position: absolute;
+  top: 10%;
+  right: -5%;
+  z-index: 0;
 }
 
-.info > img {
-  width: 50%; /* 자식 요소의 너비를 100%로 설정 */
-  height: 70%; /* 자식 요소의 높이를 100%로 설정 */
-  position: absolute; /* 자식 요소를 절대 위치로 설정 */
-  top: 15%; /* 상단에 배치 */
-  z-index: 0; /* .info > div 위에 배치 */
+.btn-style1 {
+  transition: 0.3s;
+  z-index: 1;
+  & ::before {
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: var(--btn-bg);
+    transform: scaleX(0);
+    transition: 0.3s;
+  }
+  &:hover {
+    background: #000000;
+    color: #ffffff;
+    &::before {
+      transform: scaleX(1);
+    }
+  }
+}
+.btn4 {
+  width: 200px;
+  border: none;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  overflow: hidden;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 24px;
+  background-color: #FF3333;
+  padding: 10px 30px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.20);
+}
+.footer-table{
+  display: flex;
+  width: 30%;
+  justify-content: space-around;
+  align-items: center;
+}
+li{
+  color: white;
+}
+li a{
+  font-size: 15px;
+}
+li img{
+  width: 30px;
+}
+.text-area{
+  font-weight: 700;
+  font-family: Open Sans,sans-serif;
+  display: flex;
+  flex-direction: column;
+  padding: 0 100px;
+  & h2{
+    font-size: 50pt;
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+  & p{
+    font-size: 17pt;
+    line-height: 50px;
+  }
+}
+.header-logo{
+  z-index: 1000;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  & img{
+    width: 100px;
+  }
 }
