사이드 랜덤 이미지 생성

--- a/src/user/scss/LoginRight.scss
+++ b/src/user/scss/LoginRight.scss
@@ -62,6 +62,12 @@
 
     }
 
+    .user-join-move-link{
+      margin: 1rem 0;
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
+
     .login-state-item{
 
       .user-login-button{
