--- a/src/user/scss/LoginRight.scss
+++ b/src/user/scss/LoginRight.scss
@@ -8,11 +8,11 @@
   border-radius: 0 10px 10px 0;
 
   width: 30rem;
-  height: 100%;
+  height: 90%;
   padding: 2rem;
 
-  display: flex; flex-flow: column wrap;
-  //justify-content: space-between;
+  display: flex;
+  flex-flow: column wrap;
 
   .login-title{
     font-size: 3rem;
@@ -73,7 +73,6 @@
       .user-login-button{
         width: 100%; padding: 1rem 0;
         background: #3FFEAE;
-        //border: 2px solid #D9D9D9;
 
         color: #000000;
         font-size: 1.5rem; font-weight: bold;
