--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -2,13 +2,12 @@
 .box {
   width: 100%;
   height: 101vh;
-  background: #61dafb;
   display: flex;
   flex-direction: row;
+  background-size: contain;
 }
 
 .a {
-  background: white;
   flex: 7.5;
   display: flex;
   flex-direction: column;
@@ -17,6 +16,8 @@
 .chat {
   flex: 2.5;
   background: #fff9f9;
+  opacity: 0.8;
+
 }
 
 .show-img {
@@ -27,7 +28,6 @@
   display: flex;
   align-items: center;
   justify-content: end;
-  background: #78c7d2;
   padding-bottom: 40px;
   background-size: 100% 100%;
 }
@@ -50,17 +50,14 @@
 .user-list {
   flex: 2;
   width: 100%;
-  background: blue;
   display: flex;
   flex-direction: row;
 }
 
 .user {
   width: 100%;
-  height: 100%;
-  background: #61dafb;
+  height: 90%;
   display: flex;
-
 }
 
 .create {
@@ -87,9 +84,11 @@
   overflow-y: scroll;
   width: 100%;
   height: 90%;
-  background: pink;
   display: flex;
   flex-direction: column-reverse;
+  & li{
+    font-size: 20px;
+  }
 }
 
 .chat-input {
@@ -105,21 +104,27 @@
 
 .input-group {
   width: 100%;
+  & input{
+    font-size: 20px;
+  }
 }
 
 .l-a {
-  width: 16.8%;
+  border-radius: 15%;
+  margin-left: 0.658%;
+  margin-bottom: 1%;
+  width: 16%;
   height: 100%;
-  background: #FDD9DD;
+  background: #fff9f9;
+  opacity: 0.8;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  border: 1px solid black;
 }
 .animated-slide-in {
   animation: slideIn 0.5s forwards;
-  opacity: 0;
+  //opacity: 0;
 }
 
 @keyframes slideIn {
@@ -129,7 +134,7 @@
   }
   to {
     transform: translateX(0);
-    opacity: 1;
+    opacity: 0.9;
   }
 }
 .user-score{
@@ -279,7 +284,8 @@
 .showImg {
   width: 42%;
   height: 50%;
-  background: white;
+  background: #FFFFFF;
+  border-radius: 1.5%;
 }
 
 // ---------------------------------
