--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -193,8 +193,8 @@
 .profile img{
   border-radius: 90%;
   background: #fff9f9;
-  width: 90%;
-  height: 90%;
+  width: 100px;
+  height: 100px;
 }
 
 .score {
