--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -222,6 +222,26 @@
         font-weight: bold;
       }
 
+      .user-follow-list-item{
+        background: #FFFFFF;
+        width: 20rem;
+        border-radius: 10px;
+
+        position: absolute;
+        z-index: 3;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        //overflow: scroll;
+
+        li{
+          color: #333333;
+
+        }
+
+      }
+
       /*width: 100%;
       height: 15vh;
       display: flex;
