--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -190,10 +190,11 @@
         , .create-member-date
       {
         background-color: #9b9ae2;
-        color: #FFFFFF;
+        color: #6D5D99;
         width: 80%;
         //height: 15vh;
         margin: 1rem auto;
+        padding: 1rem;
         border-radius: 1rem;
         display: flex;
         flex-direction: row;
@@ -226,12 +227,14 @@
         background: #FFFFFF;
         width: 20rem;
         border-radius: 10px;
+        color: #333333;
+        overflow: auto;
 
-        position: absolute;
+        /*position: absolute;
         z-index: 3;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);*/
 
         //overflow: scroll;
 
